--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config webpack.config.js",
+    "start": "nodemon server.js",
+    "dev": "webpack --watch",
     "build": "webpack --mode=production"
   },
   "babel": {
@@ -26,6 +27,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "express": "^4.18.1",
+    "nodemon": "^2.0.16",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
